--- a/README.adoc
+++ b/README.adoc
@@ -2,43 +2,55 @@
 
 ## Intro
 
-CTWM (Claude's Tab Window Manager), originally written by Claude Lecommandeur, 
-is an extension to twm, that support multiple virtual screens, and a lot of other goodies.
+CTWM (Claude's Tab Window Manager) is a **stacking window manager** for the X Window System (X11 / Xorg), originally created by Claude Lecommandeur in 1992. 
 
-It is a stacking window manager for the X Window System.
+It is an extension to twm, with support for multiple virtual screens, and a lot of other goodies.
+
 
 - use and manage up to 32 virtual screens called workspaces
 - swap from one workspace to another by clicking on a button in an optionnal panel of buttons (the workspace manager) or by invoking a function
 - customize each workspace by choosing different colors, names and pixmaps for the buttons and background root windows
 
-Major features include:
+### Features
 
-* Optional 3D window titles and border (ala Motif).
-* Shaped, colored icons.
-* Multiple icons for clients based on the icon name.
-* Windows can belong to several workspaces.
-* A map of your workspaces to move quickly windows between
-   different workspaces.
-* Animations: icons, root backgrounds and buttons can be animated.
-* Pinnable and sticky menus.
-* etc...
+Major features of the CTWM window manager include:
 
-The sources files were once the twm ones only workmgr.[ch] added (written
-from scratch by Claude Lecommandeur) and minor modifications to some twm
-files.  Since then much more extensive changes and reorganization have
-been done, so the codebase is now significantly different from plain twm.
+* stacking windows
+* written in C
+* highly customizable
+* support for up to 32 virtual desktops
+* windows can belong to several workspaces
+* a map of your workspaces to move windows quickly between different workspaces
+* pinnable and sticky menus
+* advanced icon management
+* shaped, coloured icons
+* multiple icons for clients based on the icon name
+* animations: icons, root backgrounds and buttons can optionally be animated
+* optional 3D window titles and border (ala Motif)
+* XPM and JPEG images
+* basic EWMH support (as of 4.0.0)
+* backwards-compatibility with twm
+* freely usable and distributable under the MIT License
+* and more...
+
+
+### More info
+
+The sources files were once the twm ones with only workmgr.[ch] added (written
+from scratch by Claude Lecommandeur) and minor modifications to some twm files.
+Since then much more extensive changes and reorganization have been done, 
+so the codebase is now significantly different from the original twm.
 
 If you find bugs in ctwm, or just want to tell us how much you like it,
 please send a report to the mailing list.
 
 There is a manual page, which always needs more work (any volunteers?).
-Many useful information bits are only in the CHANGES.md file, so please
-read it.
+Many useful information bits are only in the CHANGES.md file, so do read it.
 
 
 ## Configuration
 
-ctwm is build using CMake, which does its best to root around in your
+ctwm is built using CMake, which does its best to root around in your
 system to find the pieces the build needs.  Occasionally though you might
 have to give it some help, or change the defaults of what features are
 expected.
